# hydra-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
configs/: main.yaml
configs/database/: postgres.yaml
configs/hydra/: default.yaml
configs/model/: resnet.yaml
configs/paths/: default.yaml
examples/simple_c/: main.c
examples/simple_cpp/: main.cpp
include/hydra/: c_api.h  c_api_utils.h  config_node.hpp  config_utils.hpp  interpolation.hpp  log.h  logging.h  logging.hpp  overrides.hpp  time_utils.hpp  yaml_emitter.hpp  yaml_loader.hpp
src/: c_api.cpp  c_api_utils.cpp  config_node.cpp  config_utils.cpp  interpolation.cpp  log.c  logging.cpp  main.cpp  overrides.cpp  time_utils.cpp  yaml_emitter.cpp  yaml_loader.cpp
tests/: CMakeLists.txt  test_c_api.c  test_c_integration.c  test_main.cpp
tests/configs/integration/: simple.yaml  with_env.yaml
tests/configs/logging/: console_only.yaml  file_only.yaml  level_debug.yaml  level_info.yaml
